--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		}
 		#canvas-container {
 			width: 100%;
+			border:1px;
 			text-align:center;
 		}
 	</style>
@@ -35,12 +36,14 @@
 //0,0 is top left in Canvas
 var mobileRatio = 9/16;
 var height = window.innerHeight;
-var width=height / (16/9);
+var width=height / (9/16);
 
 var player={};
 var gravity=.91/2;
 var keymovepower=0.55;
-var friction = 0.95;
+var friction = 0.98;
+
+var mouse={};
 
 function init() {
 	canvas.width  = width
@@ -58,16 +61,31 @@ function drawGame(){
 	//draw Ball
 	ctx.clearRect(0, 0, canvas.width, canvas.height);
 	ctx.beginPath();
-	ctx.arc(player.x,player.y,19 * mobileRatio,0,2*Math.PI);
+	ctx.arc(player.x,player.y,height*0.05,0,2*Math.PI);
 	ctx.stroke();
 	ctx.fill();
+
+	//draw x/y
+	var ctx = canvas.getContext("2d");
+	ctx.font = "16px Arial";
+	ctx.fillText("X: " + mouse.x,10,50);
+	ctx.fillText("Y: " + mouse.y,10,70);
+	ctx.fillText("sX: " + mouse.startx,10,90);
+	ctx.fillText("sY: " + mouse.starty,10,110);
+
+	//Draw vector
+	if(mouse.down){
+		ctx.beginPath();
+		ctx.moveTo(player.x,player.y)
+		player.dx=mouse.startx-mouse.x;
+		player.dy=mouse.starty-mouse.y;
+		ctx.lineTo(player.x + player.dx,player.y + player.dy);
+		ctx.stroke();
+	}
 }
 
 function updateGame(){
-	//Gravity + movement
-	player.yspeed+=gravity;
-	if (player.jumpCountdown!=0)
-		player.jumpCountdown--;
+	
 	//Calculate key movement for old school keyboards.
 	if (keys[37])	//Left arrow
 		player.xspeed-=keymovepower;
@@ -76,13 +94,20 @@ function updateGame(){
 
 	//Calculate gyro into player pos
 	player.xspeed*=friction;
+	
+	//Update player pos
+	player.x+=player.xspeed;
+	player.y+=player.yspeed;
+
+	//Gravity + movement
+	player.yspeed+=gravity;
+	if (player.jumpCountdown!=0)
+		player.jumpCountdown--;
+
 	//floor
 	if (player.y>=height - 50){
 		player.yspeed=0;
 	}
-	//Update player pos
-	player.x+=player.xspeed;
-	player.y+=player.yspeed;
 
 	if (player.x<0)
 		player.x=width;
@@ -106,6 +131,29 @@ var mainloop = function() {
 	drawGame();
 };
 setInterval( mainloop, ONE_FRAME_TIME );
+
+
+//Bind mouse move
+document.onmousedown = function() {
+	mouse.down=true;
+	mouse.startx=mouse.x;
+	mouse.starty=mouse.y
+}
+document.onmouseup = function() {
+	player.xspeed+=(player.dx / 6 );
+	player.yspeed+=player.dy / 6;
+
+	mouse.down=false;
+	mouse.startx=null;
+	mouse.starty=null;
+}
+
+document.onmousemove = function(e) {
+  e = e || window.event  
+
+  mouse.x = e.clientX;
+  mouse.y = e.clientY;
+}
 
 </script>
 </body>
