Code indenting, added small gravity fix. still canf all through

--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@ var friction = 0.98;
 var mouse={};
 var ongoingTouches = new Array();
 
-
 function init() {
 	canvas.width  = width
 	canvas.height = height;
@@ -56,6 +55,7 @@ function init() {
 	player.y=80;
 	player.xspeed=0;
 	player.yspeed=0;
+	jumpCountdown=0;
 }
 
 function drawGame(){
@@ -107,8 +107,9 @@ function updateGame(){
 		player.jumpCountdown--;
 
 	//floor
-	if (player.y>=height - 50){
-		player.yspeed=0;
+	if (player.y>=height - 50 ){
+		if(!player.jumpCountdown>0)
+			player.yspeed=0;
 	}
 
 	if (player.x<0)
@@ -121,7 +122,7 @@ function updateGame(){
 }
 
 init()
- 
+
 var keys = [];
 window.onkeyup = function(e) {keys[e.keyCode]=false;}
 window.onkeydown = function(e) {keys[e.keyCode]=true;}
@@ -142,6 +143,7 @@ document.onmousedown = function() {
 	mouse.starty=mouse.y
 }
 document.onmouseup = function() {
+	player.jumpCountdown=30;
 	player.xspeed+=(player.dx / 6 );
 	player.yspeed+=player.dy / 6;
 
@@ -151,93 +153,93 @@ document.onmouseup = function() {
 }
 
 document.onmousemove = function(e) {
-  e = e || window.event  
+	e = e || window.event  
 
-  mouse.x = e.clientX;
-  mouse.y = e.clientY;
+	mouse.x = e.clientX;
+	mouse.y = e.clientY;
 }
 
 //Bind touch to mouse
- canvas.addEventListener("touchstart", handleStart, false);
-  canvas.addEventListener("touchend", handleEnd, false);
+canvas.addEventListener("touchstart", handleStart, false);
+canvas.addEventListener("touchend", handleEnd, false);
   // canvas.addEventListener("touchcanccanvas", handleCancel, false);
   canvas.addEventListener("touchmove", handleMove, false);
 
   function ongoingTouchIndexById(idToFind) {
-  for (var i = 0; i < ongoingTouches.length; i++) {
-    var id = ongoingTouches[i].identifier;
-    
-    if (id == idToFind) {
-      return i;
-    }
-  }
+  	for (var i = 0; i < ongoingTouches.length; i++) {
+  		var id = ongoingTouches[i].identifier;
+
+  		if (id == idToFind) {
+  			return i;
+  		}
+  	}
   return -1;    // not found
 }
 
 function copyTouch(touch) {
-  return { identifier: touch.identifier, pageX: touch.pageX, pageY: touch.pageY };
+	return { identifier: touch.identifier, pageX: touch.pageX, pageY: touch.pageY };
 }
 
 function handleStart(evt) {
-  evt.preventDefault();  
-  var touches = evt.changedTouches;
-        
-  for (var i = 0; i < touches.length; i++) {
-    console.log("touchstart:" + i + "...");
-    ongoingTouches.push(copyTouch(touches[i])); 
-    mouse.down=true;
-	mouse.startx=touches[i].pageX;
-	mouse.starty=touches[i].pageY; 
-	mouse.x = touches[i].pageX;
-	mouse.y = touches[i].pageY;
+	// evt.preventDefault();  
+	var touches = evt.changedTouches;
 
-  }
+	for (var i = 0; i < touches.length; i++) {
+		console.log("touchstart:" + i + "...");
+		ongoingTouches.push(copyTouch(touches[i])); 
+		mouse.down=true;
+		mouse.startx=touches[i].pageX;
+		mouse.starty=touches[i].pageY; 
+		mouse.x = touches[i].pageX;
+		mouse.y = touches[i].pageY;
+
+	}
 }
 function handleEnd(evt) {
-  evt.preventDefault();
-  var touches = evt.changedTouches;
-  document.onmouseup();
+	// evt.preventDefault();
+	var touches = evt.changedTouches;
+	document.onmouseup();
 
-  for (var i = 0; i < touches.length; i++) {
-    var idx = ongoingTouchIndexById(touches[i].identifier);
-    if (idx >= 0) {
+	for (var i = 0; i < touches.length; i++) {
+		var idx = ongoingTouchIndexById(touches[i].identifier);
+		if (idx >= 0) {
       ongoingTouches.splice(idx, 1);  // remove it; we're done
-    } else {
-      console.log("can't figure out which touch to end");
-    }
+  } else {
+  	console.log("can't figure out which touch to end");
   }
+}
 }
 
 function handleMove(evt) {
-  evt.preventDefault();
-  var el = document.getElementsByTagName("canvas")[0];
-  var ctx = el.getContext("2d");
-  var touches = evt.changedTouches;
+	// evt.preventDefault();
+	var el = document.getElementsByTagName("canvas")[0];
+	var ctx = el.getContext("2d");
+	var touches = evt.changedTouches;
 
-  for (var i = 0; i < touches.length; i++) {
+	for (var i = 0; i < touches.length; i++) {
     // var color = colorForTouch(touches[i]);
     var idx = ongoingTouchIndexById(touches[i].identifier);
 
     if (idx >= 0) {
-  mouse.x = touches[i].pageX;
-  mouse.y = touches[i].pageY;
+    	mouse.x = touches[i].pageX;
+    	mouse.y = touches[i].pageY;
 
       ongoingTouches.splice(idx, 1, copyTouch(touches[i]));  // swap in the new touch record
       console.log(".");
-    } else {
-      console.log("can't figure out which touch to continue");
-    }
+  } else {
+  	console.log("can't figure out which touch to continue");
   }
+}
 }
 
 function handleCancel(evt) {
-  evt.preventDefault();
-  console.log("touchcancel.");
-  var touches = evt.changedTouches;
-  
-  for (var i = 0; i < touches.length; i++) {
+	// evt.preventDefault();
+	console.log("touchcancel.");
+	var touches = evt.changedTouches;
+
+	for (var i = 0; i < touches.length; i++) {
     ongoingTouches.splice(i, 1);  // remove it; we're done
-  }
+}
 }
 
 
