--- a/index.html
+++ b/index.html
@@ -76,13 +76,19 @@ var friction = 0.98;
 var blocks=[];
 var blockwidth = height*0.3;
 var blockheight = height*0.15;
+var inMenu=true;
 
 // var blockType = {  };
 
 var levels=[
 {blocks:[ {x:width/2,y:height*0.8}],  goal:{x:width*0.85,y:height-height/9}},
-{blocks:[ {x:width/2,y:height/2}, {x:width/2,y:height*0.8}],  goal:{x:width*0.8,y:height-height/10}}
+{blocks:[ {x:width/2,y:height/2}, {x:width/2,y:height*0.8}],  goal:{x:width*0.8,y:height-height/10}},
+{blocks:[ {x:width/2,y:height*0.8}],  goal:{x:width*0.85,y:height-height*0.85}},
+{blocks:[ {x:width*0.5,y:height*0.8}, {x:width*0.8,y:height*0.35}, {x:width/2,y:height*0.6}, {x:width*0.2,y:height*0.5},{x:width*0.2,y:height*0.4},{x:width*0.2,y:height*0.3},{x:width*0.2,y:height*0.2},{x:width*0.2,y:height*0.1}],  goal:{x:width*0.8,y:height-height/10}},
 
+{blocks:[ {x:width*0.3,y:height*0.3}, {x:width*0.4,y:height*0.3}, {x:width*0.5,y:height*0.3}, {x:width*0.15,y:height*0.3}, {x:width*0.15,y:height*0.1}, {x:width*0.6,y:height*0.3} ,
+		  {x:width*0.2,y:height*0.9}, {x:width*0.3,y:height*0.7}, {x:width*0.4,y:height*0.7}, {x:width*0.5,y:height*0.7}, {x:width*0.15,y:height*0.7} ],  goal:{x:width*0.8,y:height-height/10}},
+// {blocks:[ {x:width/2,y:height*0.8}],  goal:{x:width*0.85,y:height-height*0.85}},
 ];
 
 var mouse={};
@@ -104,6 +110,10 @@ function init() {
 	jumpCountdown=0;
 	player.winCount=0;
 	player.winner=false;
+
+	if(level>=levels.length){
+		inMenu=true;
+	}
 
 	//Level 0, turn this into something better down the line
 }
@@ -137,7 +147,7 @@ function drawGame(){
 		ctx.fillRect(block.x,block.y,blockwidth,blockheight);
 	}
 	// //draw x/y		
-	ctx.font = "16px Arial";
+	ctx.font = "22px Arial";
 	ctx.fillText("Turns Left: " + player.turnsLeft,10,50);
 	if (player.locked)
 		ctx.fillText("Locked",10,70);
@@ -166,7 +176,6 @@ function drawGame(){
 }
 
 function updateGame(){
-
 	if (player.winner){
 		player.winCount+=35;
 		console.log(player.winCount);
@@ -251,13 +260,26 @@ function updateGame(){
 			player.lockcount++;
 			if (player.lockcount>8){
 				player.locked=false;
-				if (player.turnsLeft==0)
+				if (player.turnsLeft==0 && !player.winner)
 					init()	
 			}
 		}
 	}
 
 	
+}
+
+function drawMenu(){
+	var ctx = canvas.getContext("2d");
+	ctx.textAlign="center"; 
+	for (var x = 0; x < 5; x++) {
+		for (var y = 0; y < 4; y++) {
+		ctx.roundRect(width/4 * x + width/20, height/4 * y + height/20, width/6, height/6, 20).stroke();
+		ctx.font = height/9+"px Arial";
+		ctx.fillText(y *  4 + (x+1) ,width/4 * x + width*0.13	, height/4*y + width*0.10);
+		}
+	}
+
 }
 
 init()
@@ -269,8 +291,12 @@ window.onkeydown = function(e) {keys[e.keyCode]=true;}
 //Game Loop
 var ONE_FRAME_TIME = 1000 / 60 ;
 var mainloop = function() {
-	updateGame();
-	drawGame();
+	if (inMenu){
+		drawMenu();
+	}else{
+		updateGame();
+		drawGame();
+	}
 };
 setInterval( mainloop, ONE_FRAME_TIME );
 
@@ -293,7 +319,7 @@ document.onmouseup = function() {
 	if (mouse.down){
 	player.jumpCountdown=0;
 
-	var maxSpeed = height*0.52;
+	var maxSpeed = height*0.4;
 	var hyp = player.dx * player.dx + player.dy*player.dy;
 	hyp = Math.sqrt(hyp);
 	var multiplier = maxSpeed/hyp;
@@ -331,6 +357,20 @@ document.onmouseup = function() {
 	mouse.down=false;
 	mouse.startx=null;
 	mouse.starty=null;
+	}
+
+	//
+	if (inMenu){
+		console.log(mouse.x + " " + mouse.y)
+		// console.log("divx = " + mouse.x/width * 4);
+		// console.log("divy = " + mouse.y/height * 4);
+		var x =  Math.floor(mouse.x/width * 4);
+		var y =  Math.floor(mouse.y/height * 4);
+		level = y*4 + x-1;
+		console.log("going to level - " + level);
+
+		inMenu=false;
+		init();
 	}
 }
 
@@ -424,6 +464,19 @@ function handleCancel(evt) {
 	for (var i = 0; i < touches.length; i++) {
     ongoingTouches.splice(i, 1);  // remove it; we're done
 }
+}
+
+CanvasRenderingContext2D.prototype.roundRect = function (x, y, w, h, r) {
+  if (w < 2 * r) r = w / 2;
+  if (h < 2 * r) r = h / 2;
+  this.beginPath();
+  this.moveTo(x+r, y);
+  this.arcTo(x+w, y,   x+w, y+h, r);
+  this.arcTo(x+w, y+h, x,   y+h, r);
+  this.arcTo(x,   y+h, x,   y,   r);
+  this.arcTo(x,   y,   x+w, y,   r);
+  this.closePath();
+  return this;
 }
 
 
