--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     }
 </style>
 
-<script>           
+<script>
   function doOnOrientationChange(){
   	window.location.reload();
   }
@@ -77,18 +77,50 @@ var blocks=[];
 var blockwidth = height*0.3;
 var blockheight = height*0.15;
 var inMenu=true;
+var t = {
+	bounce:2,
+
+}; //types
 
 // var blockType = {  };
 
 var levels=[
-{blocks:[ {x:width/2,y:height*0.8}, {x:width*0.2,y:height*0.5}],  goal:{x:width*0.85,y:height-height/9}},
-{blocks:[ {x:width/2,y:height/2}, {x:width/2,y:height*0.8}],  goal:{x:width*0.8,y:height-height/10}},
-{blocks:[ {x:width/2,y:height*0.8}],  goal:{x:width*0.85,y:height-height*0.85}},
+{blocks:[ {x:width*0.4,y:height*0.8}],  goal:{x:width*0.8,y:height-height/9}},
+{blocks:[ {x:width*0.5,y:height*0.3}, {x:width*0.4,y:height*0.8}],  goal:{x:width*0.8,y:height*0.55}},
+{blocks:[ {x:width*0.4,y:height*0.8,type:t.bounce}, {x:width*0.8,y:height*0.8,type:t.bounce}],  goal:{x:width*0.85,y:height-height*0.85}},
 {blocks:[ {x:width*0.5,y:height*0.8}, {x:width*0.8,y:height*0.35}, {x:width/2,y:height*0.6}, {x:width*0.2,y:height*0.5},{x:width*0.2,y:height*0.4},{x:width*0.2,y:height*0.3},{x:width*0.2,y:height*0.2},{x:width*0.2,y:height*0.1}],  goal:{x:width*0.8,y:height-height/10}},
 
-{blocks:[ {x:width*0.3,y:height*0.3}, {x:width*0.4,y:height*0.3}, {x:width*0.5,y:height*0.3}, {x:width*0.15,y:height*0.3}, {x:width*0.15,y:height*0.1}, {x:width*0.6,y:height*0.3} ,
-		  {x:width*0.2,y:height*0.9}, {x:width*0.3,y:height*0.7}, {x:width*0.4,y:height*0.7}, {x:width*0.5,y:height*0.7}, {x:width*0.15,y:height*0.7} ],  goal:{x:width*0.8,y:height-height/10}},
-// {blocks:[ {x:width/2,y:height*0.8}],  goal:{x:width*0.85,y:height-height*0.85}},
+{blocks:[ {x:width*0.3,y:height*0.3}, // 5, black bounce trap
+	{x:width*0.4,y:height*0.3},
+	{x:width*0.5,y:height*0.3},
+	{x:width*0.15,y:height*0.3},
+	{x:width*0.15,y:height*0.1},
+	{x:width*0.6,y:height*0.3} ,
+	{x:width*0.2,y:height*0.9},
+	{x:width*0.3,y:height*0.7},
+	{x:width*0.4,y:height*0.7},
+	{x:width *0.5,y:height*0.7},
+	{x:width*0.15,y:height*0.7}],
+	goal:{x:width*0.8,y:height-height/10}},
+{blocks:[ {x:width*0.4,y:height*0.8}, //6 bouncy level
+	{x:width*0.2,y:height*0.4, type:t.bounce},
+	{x:width*0.7,y:height*0.4, type:t.bounce},
+	{x:width*0.01,y:height*0.3},
+	{x:width*0.9,y:height*0.3}],
+ 	goal:{x:width*0.85,y:height-height*0.85}
+},
+{blocks:[  // 7
+	{x:width*0.0,y:height*0.5},
+	{x:width*0.2,y:height*0.5},
+	{x:width*0.4,y:height*0.5, type:t.bounce},
+	{x:width*0.6,y:height*0.5},
+	{x:width*0.7,y:height*0.5},
+	{x:width*0.7,y:height*0.6},
+	// {x:width*0.7,y:height*0.7},
+	{x:width*0.7,y:height*0.4},
+	{x:width*0.7,y:height*0.3},
+	],
+	goal:{x:width*0.2,y:height*0.85}}, 
 ];
 
 var mouse={};
@@ -115,47 +147,48 @@ function init() {
 		inMenu=true;
 	}
 
+	// if (localStorage.stars == null || localStorage.stars==undefined){
+	// 	localStorage.stars=Array();
+	// 	localStorage.stars[0]=0;
+	// }
+
 	//Level 0, turn this into something better down the line
 }
 
 function drawGame(){
 	var ctx = canvas.getContext("2d");
-	
-
-
-
-
-
-
 	//Draw Blocks
 	var currentlevel=levels[level];
 	//draw Ball
 	ctx.clearRect(0, 0, canvas.width, canvas.height);
 	ctx.beginPath();
-	
-
-
-
 	ctx.arc(player.x,player.y,player.height,0,2*Math.PI);
 	ctx.stroke();
-	ctx.fill();
+	ctx.fill();	
 
 
+	//Draw Blocks
 	for (var i = 0; i < levels[level].blocks.length; i++) {
 		// Create gradient
-		var block = levels[level].blocks[i];		
+		var block = levels[level].blocks[i];
+		if (block.type == t.bounce){
+			ctx.fillStyle="rgba(0, 0, 200, 1.0)";
+		}else{
+			ctx.fillStyle="rgba(0, 0, 0, 1.0)";
+		}
 		ctx.fillRect(block.x,block.y,blockwidth,blockheight);
 	}
-	// //draw x/y		
+	// //draw x/y
+	ctx.fillStyle="rgba(0, 0, 0, 1.0)";
 	ctx.font = "22px Arial";
-	ctx.fillText("Turns Left: " + player.turnsLeft,10,50);
+	ctx.fillText("Level: " + (level + 1) +  " Turns Left: " + player.turnsLeft,10,50);
 	if (player.locked)
 		ctx.fillText("Locked",10,70);
 
 
 //Undo Transform
 	// ctx.setTransform(1, 0, 0, 1, 0, 0);
-	
+
 	//goal
 	ctx.fillStyle="rgba(00, 220, 0, 0.2)";
 	ctx.fillRect(currentlevel.goal.x - player.winCount,currentlevel.goal.y - player.winCount,blockwidth + player.winCount ,blockheight + player.winCount);
@@ -172,17 +205,36 @@ function drawGame(){
 		ctx.stroke();
 	}
 
+	//draw win screen
+	if (player.winCount>1500){
+		if (mouse.down){ //advance level on click
+			level++;
+			init();
+		}
+		ctx.fillStyle="#fff";
+		ctx.fillRect(width*0.1,height*0.1,width*0.8,height*0.8);
+		ctx.fillStyle="#000";
+		ctx.textAlign="center";
+		ctx.font = "36px Arial";
+		ctx.fillText("Level Cleared!",width/2,height*0.3);
+		ctx.font = "200px Arial";
+		ctx.fillStyle="#494";
+		ctx.fillText("*",width*0.3,height*0.8);
+		var stringlevel = "stars" + level;
+		if (localStorage.getItem(stringlevel)  >1)
+			ctx.fillText("*",width*0.5,height*0.8);
+		if (localStorage.getItem(stringlevel)  >2)
+			ctx.fillText("*",width*0.7,height*0.8);
+		ctx.textAlign="left";
+	}
+
+
 
 }
 
 function updateGame(){
 	if (player.winner){
 		player.winCount+=35;
-		console.log(player.winCount);
-	}
-	if (player.winCount>1500){
-		level++;
-		init();
 	}
 	
 	//Calculate key movement for old school keyboards.
@@ -193,7 +245,7 @@ function updateGame(){
 
 	//Calculate gyro into player pos
 	player.xspeed*=friction;
-	
+
 	//Update player pos
 	player.x+=player.xspeed;
 	player.y+=player.yspeed;
@@ -223,34 +275,69 @@ function updateGame(){
 		}
 		else
 			var block = blocks[i];
+
+			var ctx = canvas.getContext('2d');
+			ctx.beginPath();
+			ctx.moveTo(block.x + blockwidth, block.y);
+			ctx.lineTo(block.x + blockwidth, 0);
+			ctx.strokeStyle = '#800080';
+			ctx.stroke();
+
 		//Player Hit Detection of blocks, only if jump is not on cooldown
 		if (jumpCountdown==0 && block.visibile!=false){
+
 			var xdif=player.x-block.x;
-			var ydif=player.y-block.y;				
+			var ydif=player.y-block.y;
 			if (xdif >= -player.height && xdif <= blockwidth ){ //x and y hit
-				if (ydif>=-player.height &&  ydif < blockheight  + player.height){
+				if (ydif>=-player.height &&  ydif <= blockheight  + player.height){
+					var bounce=false;
+					//blue bouncey block
+					if (block.type == t.bounce){
+						bounce=true;
+					}
+					else{ // velcro type
+						player.xspeed=0;//.1;
+						player.yspeed=0;//.1;
+					}
 
-					player.xspeed=0;//.1;
-					player.yspeed=0;//.1;
-					//  if(xdif>0 && ydif <0){ // RIGHT
-					// 	player.x= block.x + blockwidth  + player.height -2;
-					// }
-					//  if (xdif<0){ // Left
-					// 	player.x = block.x - player.height + 2;
-					// }
-					// if(ydif>0){ // Below						
-					// 	player.y= block.y + blockheight  + player.height -2;
-					// }  if (ydif<0){  //Above
-					// 	player.y = block.y - player.height + 2;
-					// }
+					//Player midpoint
+					var px = player.x + player.height/2; // because player width doesn't exist
+					var py = player.y + player.height/2;
 
-					// if (player.y<block.y && player   )
-					
-					
+					//Block midpoint
+					var bx = block.x + blockwidth/2;
+					var by = block.y + blockheight/2;
 
+					if (checkLineIntersection(px, py, bx, by, block.x, block.y, block.x, block.y+blockheight).onLine2 && xdif < 0) { // Left border and on left
+						// console.log("Collision with LEFT");
+						player.x = block.x - player.height + 2;
+						if(bounce)player.xspeed*=-1;
+					} 
+					else if (checkLineIntersection(px, py, bx, by, block.x+blockwidth, block.y, block.x+blockwidth , block.y+blockheight).onLine2 && xdif > 0) { // Right border and to right
+						// console.log("Collision with RIGHT");
+						player.x = block.x + blockwidth ;
+						if(bounce)player.xspeed*=-1;
+						// PROBLEM here
+
+
+					} else if (checkLineIntersection(px, py, bx, by, block.x, block.y, block.x+blockwidth, block.y).onLine2 && ydif < 0) { // Top border and above
+						// console.log("Collision with TOP");
+						if(bounce)player.yspeed*=-1;
+						player.y = block.y - player.height + 2;
+					} else if (checkLineIntersection(px, py, bx, by, block.x, block.y+blockheight, block.x+blockwidth, block.y+blockheight).onLine2 && ydif > 0) { // Bottom border and below
+						// console.log("Collision with BOTTOM");
+						player.y = block.y + blockheight + player.height - 2;
+						if(bounce)player.yspeed*=-1;
+					}
 
 					if(block.isGoal){
 						player.winner=true;
+						var score = player.turnsLeft + 1;
+						var starstring ="stars" + level;
+						if (score>3)
+							score=3;
+						if (score > localStorage.getItem(starstring))
+							localStorage.setItem(starstring,score);						
 					}
 
 				}
@@ -266,27 +353,27 @@ function updateGame(){
 	}
 
 	if (player.x<0 + player.height || player.x> (width - player.height)){
-		player.xspeed=-player.xspeed 
+		player.xspeed=-player.xspeed
 		// player.xspeed*=0.8;
 	}
-		
+
 	if (player.locked){
 		if(player.xspeed==0 && player.yspeed==0){
 			player.lockcount++;
 			if (player.lockcount>8){
 				player.locked=false;
 				if (player.turnsLeft==0 && !player.winner)
-					init()	
+					init()
 			}
 		}
 	}
 
-	
+
 }
 
 function drawMenu(){
 	var ctx = canvas.getContext("2d");
-	ctx.textAlign="center"; 
+	ctx.textAlign="center";
 	for (var x = 0; x < 5; x++) {
 		for (var y = 0; y < 4; y++) {
 		ctx.roundRect(width/4 * x + width/20, height/4 * y + height/20, width/6, height/6, 20).stroke();
@@ -334,18 +421,14 @@ document.onmouseup = function() {
 	if (mouse.down){
 	player.jumpCountdown=0;
 
-	var maxSpeed = height*0.5;
+	var maxSpeed = height*0.45;
 	var hyp = player.dx * player.dx + player.dy*player.dy;
 	hyp = Math.sqrt(hyp);
 	var multiplier = maxSpeed/hyp;
-	console.log("hyp = " + hyp);
-	console.log("multi = " + multiplier);
-	console.log("dx = " + player.dx + " and dy : " +player.dy );
 
 	// player.dx *
 	if (multiplier>1)
 		multiplier=1;
-	console.log("height =  " + height);
 
 	multiplier*=0.08;// + ((520/height) *0.01);
 
@@ -376,7 +459,7 @@ document.onmouseup = function() {
 }
 
 document.onmousemove = function(e) {
-	e = e || window.event  
+	e = e || window.event
 
 	mouse.x = e.clientX;
 	mouse.y = e.clientY;
@@ -404,16 +487,16 @@ function copyTouch(touch) {
 }
 
 function handleStart(evt) {
-	// evt.preventDefault();  
+	// evt.preventDefault();
 	var touches = evt.changedTouches;
 
 	for (var i = 0; i < touches.length; i++) {
 		console.log("touchstart:" + i + "...");
-		ongoingTouches.push(copyTouch(touches[i])); 
+		ongoingTouches.push(copyTouch(touches[i]));
 		if (!player.locked){
 			mouse.down=true;
 			mouse.startx=touches[i].pageX;
-			mouse.starty=touches[i].pageY; 
+			mouse.starty=touches[i].pageY;
 			mouse.x = touches[i].pageX;
 			mouse.y = touches[i].pageY;
 		}
@@ -479,6 +562,48 @@ CanvasRenderingContext2D.prototype.roundRect = function (x, y, w, h, r) {
   this.closePath();
   return this;
 }
+
+// Code from http://jsfiddle.net/justin_c_rounds/Gd2S2/
+function checkLineIntersection(line1StartX, line1StartY, line1EndX, line1EndY, line2StartX, line2StartY, line2EndX, line2EndY) {
+    // if the lines intersect, the result contains the x and y of the intersection (treating the lines as infinite) and booleans for whether line segment 1 or line segment 2 contain the point
+    var denominator, a, b, numerator1, numerator2, result = {
+        x: null,
+        y: null,
+        onLine1: false,
+        onLine2: false
+    };
+
+    denominator = ((line2EndY - line2StartY) * (line1EndX - line1StartX)) - ((line2EndX - line2StartX) * (line1EndY - line1StartY));
+    if (denominator == 0) {
+        return result;
+    }
+    a = line1StartY - line2StartY;
+    b = line1StartX - line2StartX;
+    numerator1 = ((line2EndX - line2StartX) * a) - ((line2EndY - line2StartY) * b);
+    numerator2 = ((line1EndX - line1StartX) * a) - ((line1EndY - line1StartY) * b);
+    a = numerator1 / denominator;
+    b = numerator2 / denominator;
+
+    // if we cast these lines infinitely in both directions, they intersect here:
+    result.x = line1StartX + (a * (line1EndX - line1StartX));
+    result.y = line1StartY + (a * (line1EndY - line1StartY));
+	/*
+        // it is worth noting that this should be the same as:
+        x = line2StartX + (b * (line2EndX - line2StartX));
+        y = line2StartX + (b * (line2EndY - line2StartY));
+    */
+    // if line1 is a segment and line2 is infinite, they intersect if:
+    if (a > 0 && a < 1) {
+        result.onLine1 = true;
+    }
+    // if line2 is a segment and line1 is infinite, they intersect if:
+    if (b > 0 && b < 1) {
+        result.onLine2 = true;
+    }
+
+    // if line1 and line2 are segments, they intersect if both of the above are true
+    return result;
+};
 
 
 </script>
