--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta name="format-detection" content="telephone=no" />
 	<link rel="manifest" href="/manifest.json">
 
-	<title>ChickenShoot</title>
+	<title>Chicken Fling</title>
 
 	<style>
 		html,body{
