--- a/index.html
+++ b/index.html
@@ -127,11 +127,24 @@ var mouse={};
 var level=0;
 var ongoingTouches = new Array();
 
+var sprintnames=['chuck-normal-right.png','chuck-normal-left.png','chuck-fly-right.png','chuck-fly-left.png','chuck-stuck-left.png','chuck-stuck-right.png','chuck-roof.png','chuck-sitting.png'];
+var sprites = [];
+var currentSprite=0;
+
+
+
 function init() {
 	
 	canvas.width  = width;
 	canvas.height = height;
 	canvas.imageSmoothingEnabled = true;
+
+	//Load sprites
+	for (var i = 0; i < sprintnames.length; i++) {
+		var drawing = new Image();
+		drawing.src = 'png/' + sprintnames[i];
+		sprites.push({name: sprintnames[i],image:drawing});
+	}
 
 	player.x=width/10; //Init player
 	player.y=80;
@@ -162,7 +175,9 @@ function drawGame(){
 	//draw Ball
 	ctx.clearRect(0, 0, canvas.width, canvas.height);
 	ctx.beginPath();
-	ctx.arc(player.x,player.y,player.height,0,2*Math.PI);
+
+	// ctx.arc(player.x,player.y,player.height,0,2*Math.PI);
+	ctx.drawImage(sprites[currentSprite].image,player.x - (player.height/2) ,player.y - player.height/2,player.height,player.height);
 	ctx.stroke();
 	ctx.fill();	
 
@@ -263,6 +278,19 @@ function updateGame(){
 			player.y=height -height*0.05;
 		}
 	}
+	//Player Sprites
+	if (player.xspeed>=0)
+		currentSprite=0
+	else currentSprite=1;
+	
+	if (player.yspeed<0)
+		currentSprite+=2;
+
+	if (player.xspeed==0 && player.yspeed == 0 && player.y  > height-height*0.05){
+		console.log("stuck");
+	}
+	
+
 
 	//
 	// block detection
@@ -310,12 +338,14 @@ function updateGame(){
 
 					if (checkLineIntersection(px, py, bx, by, block.x, block.y, block.x, block.y+blockheight).onLine2 && xdif < 0) { // Left border and on left
 						// console.log("Collision with LEFT");
+						currentSprite=4;
 						player.x = block.x - player.height + 2;
 						if(bounce)player.xspeed*=-1;
 					} 
 					else if (checkLineIntersection(px, py, bx, by, block.x+blockwidth, block.y, block.x+blockwidth , block.y+blockheight).onLine2 && xdif > 0) { // Right border and to right
 						// console.log("Collision with RIGHT");
 						player.x = block.x + blockwidth ;
+						currentSprite=5;
 						if(bounce)player.xspeed*=-1;
 						// PROBLEM here
 
