--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ function init() {
 	player.turnsLeft=5;
 	player.xspeed=0;
 	player.yspeed=0;
-	player.height=height*0.04;
+	player.height=height*0.1;
 	jumpCountdown=0;
 	player.winCount=0;
 	player.winner=false;
@@ -176,8 +176,12 @@ function drawGame(){
 	ctx.clearRect(0, 0, canvas.width, canvas.height);
 	ctx.beginPath();
 
-	// ctx.arc(player.x,player.y,player.height,0,2*Math.PI);
-	ctx.drawImage(sprites[currentSprite].image,player.x - (player.height/2) ,player.y - player.height/2,player.height,player.height);
+	ctx.fillStyle="rgba(237, 219, 206, 1.0)";
+	ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+ctx.fillStyle="rgba(0, 0, 200, 0.15)";
+	ctx.arc(player.x,player.y,player.height,0,2*Math.PI);
+	ctx.drawImage(sprites[currentSprite].image,player.x - (player.height) ,player.y - player.height,player.height * 2,player.height * 2);
 	ctx.stroke();
 	ctx.fill();	
 
@@ -187,7 +191,7 @@ function drawGame(){
 		// Create gradient
 		var block = levels[level].blocks[i];
 		if (block.type == t.bounce){
-			ctx.fillStyle="rgba(0, 0, 200, 1.0)";
+			ctx.fillStyle="rgba(20, 50, 200, 1.0)";
 		}else{
 			ctx.fillStyle="rgba(0, 0, 0, 1.0)";
 		}
@@ -271,11 +275,11 @@ function updateGame(){
 		player.jumpCountdown--;
 
 	//floor
-	if (player.y>=height - height*0.05 ){
+	if (player.y>=height - height*0.09 ){
 		if(!player.jumpCountdown>0){
 			player.yspeed=0;
 			player.xspeed=0;
-			player.y=height -height*0.05;
+			player.y=height -height*0.09;
 		}
 	}
 	//Player Sprites
@@ -337,13 +341,13 @@ function updateGame(){
 					var by = block.y + blockheight/2;
 
 					if (checkLineIntersection(px, py, bx, by, block.x, block.y, block.x, block.y+blockheight).onLine2 && xdif < 0) { // Left border and on left
-						// console.log("Collision with LEFT");
+						console.log("Collision with LEFT");
 						currentSprite=4;
-						player.x = block.x - player.height + 2;
+						player.x = block.x - player.height ;
 						if(bounce)player.xspeed*=-1;
 					} 
 					else if (checkLineIntersection(px, py, bx, by, block.x+blockwidth, block.y, block.x+blockwidth , block.y+blockheight).onLine2 && xdif > 0) { // Right border and to right
-						// console.log("Collision with RIGHT");
+						console.log("Collision with RIGHT");
 						player.x = block.x + blockwidth ;
 						currentSprite=5;
 						if(bounce)player.xspeed*=-1;
@@ -351,11 +355,12 @@ function updateGame(){
 
 
 					} else if (checkLineIntersection(px, py, bx, by, block.x, block.y, block.x+blockwidth, block.y).onLine2 && ydif < 0) { // Top border and above
-						// console.log("Collision with TOP");
+						console.log("Collision with TOP");
+						// currentSprite=7;
 						if(bounce)player.yspeed*=-1;
-						player.y = block.y - player.height + 2;
+						player.y = block.y - player.height;
 					} else if (checkLineIntersection(px, py, bx, by, block.x, block.y+blockheight, block.x+blockwidth, block.y+blockheight).onLine2 && ydif > 0) { // Bottom border and below
-						// console.log("Collision with BOTTOM");
+						console.log("Collision with BOTTOM");
 						player.y = block.y + blockheight + player.height - 2;
 						if(bounce)player.yspeed*=-1;
 					}
